--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
 			<div class="wrapper">
 
-					<button class="open-popup">Зарегистрироваться</button>
+					<a href="#" class="open-popup" rel="popup1">Зарегистрироваться</a>
 					<!--заливка-->
 					<div class="overlay"></div>
 					<!--попап форма-->
-					<div class="popup">
+					<div class="popup" id="popup1">
 
 						<ul class="tabs">
 							<li class="tabs__item">
